[package]
name = "vxr-behavior"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
uuid = {version = "0.8", features = ["serde", "v4", "v5", "wasm-bindgen"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
urlencoding = "1.1.1"

[dependencies.web-sys]
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Element',
  'DomTokenList',
  'HtmlSelectElement',
  'HtmlDocument',
  'Navigator',
  'Geolocation',
]
optional = true
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["web_sys"]
web_sys = ["web-sys"]

[lib]
name = "vxr_behavior"
crate-type = ["cdylib"]
